Added main executable to CMakeLists

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,17 @@ ADD_LIBRARY(LEXER STATIC ${LEXER_SOURCES})
 INCLUDE_DIRECTORIES("src/lexer")
 set_target_properties(LEXER PROPERTIES OUTPUT_NAME lexer)
 TARGET_LINK_LIBRARIES(LEXER)
+
+# Main executable
+file(GLOB EXECUTABLE_SOURCES 
+    "src/main.cpp" 
+)
+ADD_EXECUTABLE(COMPILER ${EXECUTABLE_SOURCES})
+set_target_properties(COMPILER PROPERTIES OUTPUT_NAME main)
+
+#Link any of the created libraries
+TARGET_LINK_LIBRARIES(COMPILER LEXER)
+
+# Set ${PROJECT_NAME} as the startup project
+set_property(DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT COMPILER)
+set_property(TARGET COMPILER PROPERTY CXX_STANDARD 17)
